# image-downscaler

./: .gitignore  LICENSE.txt  README.md  template.yaml
functions/: Cargo.toml
functions/src/: main.rs
